--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -45,13 +45,13 @@
         }
 
         input[type='date']:empty:after {
-            content: attr(placeholder);
-            color: #F2C033;
-            position: absolute;
-            top: 0;
-            left: 0;
-            font-size: 1em;
-            z-index: 1;
+            content: attr(placeholder) !important;
+            color: #F2C033 !important;
+            position: absolute !important;
+            top: 0 !important;
+            left: 0 !important;
+            font-size: 1em !important;
+            z-index: 1 !important;
         }
 
         body {
