--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -44,14 +44,9 @@
             display: none;
         }
 
-        input[type='date']:empty:after {
-            content: attr(placeholder) !important;
-            color: #F2C033 !important;
-            position: absolute !important;
-            top: 0 !important;
-            left: 0 !important;
-            font-size: 1em !important;
-            z-index: 1 !important;
+        input[type='date']:after {
+            color: #000000;
+            content: attr(placeholder);
         }
 
         body {
