--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -328,6 +328,10 @@
                 content: "";
             }
 
+            input[type='date']:not(:empty):focus:after {
+                content: "";
+            }
+
             .wrapper {
                 grid-template-columns: 1fr;
                 height: 100%;
