--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -328,7 +328,8 @@
                 content: "";
             }
 
-            input[type='date']:not(:empty):focus:after {
+            /* input type date not empty */
+            input[type='date']:not(:empty):after {
                 content: "";
             }
 
