--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -329,7 +329,7 @@
             }
 
             /* input type date not empty */
-            input[type='date']:not(:empty):after {
+            input[type='date']:not(:empty):before {
                 content: "";
             }
 
